# Ground-Support

./: .env  .eslintrc.json  .gitignore  .gitmodules  .prettierrc  Dockerfile  README.md  compose.yaml  docker-compose.yml  package-lock.json  package.json  route.sh
client/: .gitignore  Dockerfile  index.html  package-lock.json  package.json  tsconfig.node.json  vite.config.ts
client/public/: index.html  manifest.json
client/src/: index.css  index.tsx  utils.ts
documentation/: api.md  client.md  data-config.md  developer-guide.md  installation.md  lora_data_format_example.md  overview.md  server.md  telemetry.md  xenia1-example-data-config.json
documentation/components/: Frequency.md  Header.md  MissionConfig.md  RocketProfilePopup.md  module.md  (+3 more)
services/telemetry/: Cargo.toml  Dockerfile  Pipfile  README.md  decode.sh  gateway.py  requirements.txt  telemetry.py  telemetryDebugger.sh  telemetryService.sh
services/telemetry/direwolf-1.6.0-413855e_x86_64/: direwolf.conf
services/telemetry/src/: __mian__.py  app.py  aprsMock.sh  client.rs  data.rs  freq_util.rs  gateway.py  main.rs  messages.rs  server.rs  socket_gateway.py  state.rs  stdout  telemetry.py  telemetry.rs  telemetry.sh  telemetryCliOnly.sh  telemetryDebugger.sh  test.py
services/telemetry/src/utils/: bigRedBeeDecoder.py  decode_direworlf.py  random_packet_generator.py
services/telemetry/tools/: decode-test.sh  decode.sh  decode_test.sh  decode_with_sys_bin.sh  direwolf  direwolf.conf  rtl_fm  test_data.py
services/telemetry/utils/: gps_coordinate_conversion.py  random_packet_generator.py
(+211 files in other folders)
