[package]
name = "telemetry-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.28.1", features = ["full"] }
tokio-tungstenite = "0.20.1"
futures-util = { version = "0.3.29" }
hyper = { version = "0.14.26", features = ["full"] }
clap = { version = "4.3.0", features = ["derive"] }
sha1 = "0.10.6"
serde = { version = "1.0.190", features = ["derive"] }
serde_json = "1.0.107"
